[gd_scene load_steps=2 format=3 uid="uid://046lalayywa8"]

[ext_resource type="Script" path="res://scripts/creature_base.gd" id="1_k7iix"]

[node name="CreatureBase" type="CharacterBody2D" groups=["MovingSprites"]]
collision_layer = 0
script = ExtResource("1_k7iix")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.75, 0.75)

[node name="CreatureHitBox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 8

[node name="CollisionHitBox" type="CollisionShape2D" parent="CreatureHitBox"]

[node name="CollisionEnvironment" type="CollisionShape2D" parent="."]

[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="area_entered" from="CreatureHitBox" to="." method="_on_creature_hit_box_area_entered"]
